Restructure Django api app
